Whole code for server done(Transactions aint working)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= title %></title>
+  <title>Ethereum Transaction Crawler</title>
   <link rel="stylesheet" href="./style/indexstyle.css">
 </head>
 <body>
-  <h1><%= title %></h1>
+  <h1>Ethereum Transaction Crawler</h1>
 
   <% if (locals.error) { %>
     <div class="error"><%= error %></div>
