--- a/views/balance.ejs
+++ b/views/balance.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Balance Check Results</title>
-  <link rel="stylesheet" href="./balance/balancestyle.css">
+  <link rel="stylesheet" href="./style/balancestyle.css">
 </head>
 <body>
   <h1>Balance Check Results</h1>
