--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,8 +15,8 @@
 
   <div class="form-container">
     <div class="tabs">
-      <div class="tab active" onclick="switchTab('transactions')">Transactions</div>
-      <div class="tab" onclick="switchTab('balance')">Balance Check</div>
+      <div class="tab active" data-tab="transactions">Transactions</div>
+      <div class="tab" data-tab="balance">Balance Check</div>
     </div>
 
     <form id="transactions-form" class="tab-content active" method="POST" action="/transactions">
